syntax = "proto3";
package tws.proto.job;

option java_package = "edu.iu.dsc.tws.proto.system";
option java_outer_classname = "JobExecutionState";

// captures the runtime state of a job

message JobState {
    string job_name = 1;
    string job_id = 2;
    // The time the topology was submitted
    // Unix time
    int64 submission_time = 3;
    // The username who launched the topology
    string submission_user = 4;
    // the cluster under which job was submitted
    string cluster = 5;
}

message WorkerJobState {
    string job_name = 1;
    //If the worker terminated with an error
    bool failure = 2;
    string worker_message = 3;
    //If the worker failed with an exception the full stack trace is set here
    string stack_trace = 4;
}